# gomoku

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Gomoku - x64.cbp  Gomoku.cbp  README.md
assets/fonts/: Acme-OFL.txt
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake  clang-tools.cmake  out-of-source.cmake
src/: main.cpp
src/core/: error.cpp  error.hpp  sdl.cpp  sdl.hpp  version.cpp  version.hpp  wrapper.hpp
src/game/: board.cpp  board.hpp  credits.cpp  credits.hpp  finished.cpp  finished.hpp  game.cpp  game.hpp  main_menu.cpp  main_menu.hpp  playing.cpp  playing.hpp  state.cpp  state.hpp
src/gfx/: color.cpp  color.hpp  drawable.hpp  renderer.cpp  renderer.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp
src/gui/: button.cpp  button.hpp  cursor.cpp  cursor.hpp  event.cpp  event.hpp  font.cpp  font.hpp  image.cpp  image.hpp  label.cpp  label.hpp  renderer.cpp  renderer.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
